# api/v1/health_check/health_check_routes.go
@@ -1,0 +1,8 @@
+package healthcheck
+
+import "doit/internal/web"
+
+func RegisterRoutes(app *web.WebApp, handler *Handler) {
+	app.Handle("GET", "/health", handler.HealthCheck)
+	app.Handle("GET", "/ready", handler.ReadyCheck)
+}
